--- a/renovate.json
+++ b/renovate.json
@@ -1,14 +1,14 @@
 {
-  'regexManagers':
+  "regexManagers":
     [
       {
-        'fileMatch': ['.*'],
-        'matchStrings':
+        "fileMatch": [".*"],
+        "matchStrings":
           [
             ".*amiFilter=(?<packageName>.*?)\n(.*currentImageName=(?<currentDigest>.*?)\n)?(.*\n)?.*?(?<depName>[a-zA-Z0-9-_:]*)[ ]*?[:|=][ ]*?[\"|']?(?<currentValue>ami-[a-z0-9]{17})[\"|']?.*",
           ],
-        'datasourceTemplate': 'aws-machine-image',
-        'versioningTemplate': 'aws-machine-image',
+        "datasourceTemplate": "aws-machine-image",
+        "versioningTemplate': 'aws-machine-image",
       },
     ],
 }
