--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
             ".*amiFilter=(?<packageName>.*?)\n(.*currentImageName=(?<currentDigest>.*?)\n)?(.*\n)?.*?(?<depName>[a-zA-Z0-9-_:]*)[ ]*?[:|=][ ]*?[\"|']?(?<currentValue>ami-[a-z0-9]{17})[\"|']?.*",
           ],
         "datasourceTemplate": "aws-machine-image",
-        "versioningTemplate': 'aws-machine-image",
+        "versioningTemplate": "aws-machine-image",
       },
     ],
 }
